<?xml version="1.0"?>
<package format="2">
  <name>robotiq_3f_control</name>
  <version>0.0.0</version>
  <description>The robotiq_3f_control package</description>

  <maintainer email="yamafukukei@todo.todo">yamafukukei</maintainer>
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>control_msgs</depend>
  <depend>roscpp</depend>
  <depend>sensor_msgs</depend>
  <exec_depend>controller_manager</exec_depend>
  <exec_depend>joint_state_controller</exec_depend>
  <exec_depend>velocity_controllers</exec_depend>
  <exec_depend>controller_interface</exec_depend>
  <exec_depend>ros_control</exec_depend>
  <exec_depend>ros_controllers</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>

  <test_depend>roslaunch</test_depend>

</package>
