<?xml version="1.0"?>
<package format="2">
  <name>robotiq_3f_control</name>
  <version>0.0.0</version>
  <description>The robotiq_3f_control package</description>

  <maintainer email="yamafukukei@todo.todo">yamafukukei</maintainer>
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>roscpp</depend>
  <depend>sensor_msgs</depend>

  <exec_depend>robotiq_3f_gripper_joint_state_publisher</exec_depend>

  <test_depend>roslaunch</test_depend>

</package>
