<?xml version="1.0"?>
<package format="2">
  <name>robotiq_3f_description</name>
  <version>0.0.0</version>
  <description>The robotiq_3f_description package</description>

  <maintainer email="yamafukukei@todo.todo">yamafukukei</maintainer>
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>robot_state_publisher</depend>
  <depend>rviz</depend>
  <depend>xacro</depend>
  <depend>joint_state_publisher</depend>

  <test_depend>roslaunch</test_depend>

</package>
