<?xml version="1.0"?>
<package format="2">
  <name>robotiq_3f_driver</name>
  <version>1.0.0</version>
  <description>The robotiq_3f_driver package</description>

  <maintainer email="atsuki.yokota@gmail.com">Atsuki Yokota</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_srvs</build_depend>
  <build_export_depend>rospy</build_export_depend>
  <build_export_depend>std_srvs</build_export_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>std_srvs</exec_depend>

</package>
