<?xml version="1.0"?>
<package format="2">
  <name>robotiq_3f_driver</name>
  <version>1.0.0</version>
  <description>The robotiq_3f_driver package</description>

  <maintainer email="atsuki.yokota@gmail.com">Atsuki Yokota</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>std_srvs</exec_depend>
  <exec_depend>robotiq_3f_gripper_control</exec_depend>

  <test_depend>roslaunch</test_depend>

</package>
