<?xml version="1.0"?>
<package format="2">
  <name>robotiq_3f_gazebo</name>
  <version>0.0.0</version>
  <description>The robotiq_3f_gazebo package</description>
  <maintainer email="yamafukukei@todo.todo">yamafukukei</maintainer>
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <test_depend>roslaunch</test_depend>
</package>
