<?xml version="1.0"?>
<package format="2">
  <name>robotiq_3f_gazebo</name>
  <version>0.0.0</version>
  <description>The robotiq_3f_gazebo package</description>
  <maintainer email="yamafukukei@todo.todo">yamafukukei</maintainer>
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <exec_depend>gazebo_ros</exec_depend>
  <exec_depend>xacro</exec_depend>
  <exec_depend>controller_manager</exec_depend>
  <exec_depend>gazebo_ros_control</exec_depend>
  <exec_depend>joint_state_publisher</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>joint_state_controller</exec_depend>
  <exec_depend>joint_trajectory_controller</exec_depend>


  <test_depend>roslaunch</test_depend>

</package>
