<?xml version="1.0"?>
<package format="2">
  <name>robotiq_3f_srvs</name>
  <version>1.0.0</version>
  <description>The robotiq_3f_srvs package</description>

  <maintainer email="atsuki.yokota@gmail.com">Atsuki Yokota</maintainer>

  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>message_generation</depend>
  <depend>rospy</depend>
  <depend>std_msgs</depend>

  <exec_depend>message_runtime</exec_depend>

</package>
